<resources>
    <string name="app_name">Pocket Garage</string>

    <!-- Categories -->
    <string name="category_cars">Autos</string>
    <string name="category_bikes">Motos</string>
    <string name="category_wheels">Llantas</string>
    <string name="category_lights">Luces</string>
    <string name="category_electronics">Electrónicos</string>
    <string name="category_others">Otros</string>

    <!-- Hints -->
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="repeat_password_hint">Repetir contraseña</string>
    <string name="names_hint">Nombres</string>
    <string name="lastnames_hint">Apellidos</string>
    <string name="ci_hint">C.I.</string>
    <string name="borndate_hint">Fecha de nacimiento</string>
    <string name="phone_hint">Número telefónico</string>
    <string name="title_article_hint">Título</string>
    <string name="short_description_article_hint">Descripción corta</string>
    <string name="description_hint">Descripción</string>
    <string name="price_hint">Precio (Bs)</string>

    <!-- Buttons -->
    <string name="button_login">Iniciar sesión</string>
    <string name="button_register">Registrarse</string>
    <string name="button_addArticle">Publicar</string>
    <string name="button_here">aquí.</string>
    <string name="button_logout">Cerrar sesión</string>
    <string name="button_edit_profile">Editar perfil</string>
    <string name="button_save_changes">Guardar cambios</string>

    <!-- Errors -->
    <string name="error_fill_values">Please fill all the values</string>
    <string name="error_no_connection">Please review your internet connection</string>
    <string name="error_incorrect_login">Email or Password incorrect</string>
    <string name="error_incorrect_register">No se puede registrar</string>
    <string name="error_valid_email">Please enter a valid email</string>

    <string name="unknown_error">Error desconocido</string>
    <string name="empty_value_error">Llenar todos los campos requeridos</string>
    <string name="invalid_email_error">Ingrese un email válido</string>
    <string name="incorrect_email_error">Email incorrecto</string>
    <string name="incorrect_password_error">Contraseña incorrecta</string>

    <string name="invalid_ci_error">Ingrese un ci válido</string>
    <string name="invalid_name_error">Ingrese un nombre válido</string>
    <string name="invalid_last_name_error">Ingrese un apellido válido</string>
    <string name="repeated_email_error">Ya hay un usuario con ese email</string>
    <string name="repeated_ci_error">Ya hay un usuario con ese ci</string>

    <!-- Titles -->
    <string name="title_categories">Categorías</string>
    <string name="title_banner">Artículos</string>
    <string name="title_wanna_register">¿No tienes una cuenta aún? Regístrate </string>
    <string name="title_register">Regístrate</string>
    <string name="title_add_article">Publica un artículo</string>
    <string name="title_toggle_new">Nuevo</string>
    <string name="title_profile_picture">Foto de perfil</string>
    <string name="title_seller">Vendedor</string>
    <string name="title_profile">Perfil</string>
    <string name="title_edit_profile">Editar perfil</string>
    <string name="title_favourites">Favoritos</string>

    <!-- Actions -->
    <string name="action_profile">Perfil</string>
    <string name="action_favourites">Favoritos</string>

    <!-- Messages -->
    <string name="msg_added_to_favourites">añadido a favoritos</string>
    <string name="msg_removed_from_favourites">eliminado de favoritos</string>
    <string name="title_age">Edad:</string>
    <string name="direction_hint">Direccion</string>

</resources>