<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.activities.SellerProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp">

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@color/colorBlack"
            android:onClick="returnToPrevious"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:padding="10dp"
            android:text="@string/title_edit_profile"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dimen_title"
            android:textStyle="bold" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profileImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:src="@color/colorWhite"
        app:civ_border_color="#FF000000"
        app:civ_border_width="1dp" />

    <TextView
        android:id="@+id/profileNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="Nombres y apellidos"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profileAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Edad: "
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/profileAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:drawableTint="@color/colorGray"
        android:gravity="left"
        android:padding="15dp"
        android:text="Direccion: "
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/profileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
        android:drawableTint="@color/colorGray"
        android:gravity="left"
        android:padding="15dp"
        android:text="Numero: "
        android:textSize="20sp"
        android:textStyle="normal" />


    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
        android:drawableTint="@color/colorGray"
        android:gravity="left"
        android:padding="15dp"
        android:text="Correo: "
        android:textSize="20sp"
        android:textStyle="normal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="10dp">

            <Button
                android:id="@+id/editProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/gradient4"
                android:onClick="goToEditProfileActivity"
                android:padding="10dp"
                android:text="@string/button_edit_profile"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/gradient2"
                android:onClick="logOut"
                android:padding="10dp"
                android:text="@string/button_logout"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <Button
            android:id="@+id/changeLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/button_change_language"
            android:visibility="visible" />

    </RelativeLayout>

</LinearLayout>